syntax = "proto3";

package oracle.oracle;

import "gogoproto/gogo.proto";
import "oracle/oracle/params.proto";
import "oracle/oracle/price.proto";

option go_package = "oracle/x/oracle/types";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
           Params params    = 1 [(gogoproto.nullable) = false];
  repeated Price  priceList = 2 [(gogoproto.nullable) = false];
}

