syntax = "proto3";

package oracle.oracle;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "oracle/oracle/params.proto";
import "oracle/oracle/price.proto";

option go_package = "oracle/x/oracle/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/oracle/oracle/params";
  
  }
  
  // Queries a list of Price items.
  rpc Price    (QueryGetPriceRequest) returns (QueryGetPriceResponse) {
    option (google.api.http).get = "/oracle/oracle/price/{denom}";
  
  }
  rpc PriceAll (QueryAllPriceRequest) returns (QueryAllPriceResponse) {
    option (google.api.http).get = "/oracle/oracle/price";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetPriceRequest {
  string denom = 1;
}

message QueryGetPriceResponse {
  Price price = 1 [(gogoproto.nullable) = false];
}

message QueryAllPriceRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPriceResponse {
  repeated Price                                  price      = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

